--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,3 +11,6 @@ license = "MIT"
 
 [dependencies]
 rocket = "0.5.0-rc.3"
+rocket_dyn_templates = { version = "0.1.0-rc.3", features = ["tera"] }
+reqwest = { version = "0.11.16", features = ["json"] }
+serde = { version = "1.0.160", features = ["derive"] }
