--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,3 +15,8 @@ rocket_dyn_templates = { version = "0.1.0-rc.3", features = ["tera"] }
 reqwest = { version = "0.11.16", features = ["json"] }
 serde = { version = "1.0.160", features = ["derive"] }
 serde_json = "1.0.95"
+deadpool = { version = "0.9.1", default = false, features = ["managed", "serde"] }
+deadpool-redis = { version = "0.11.1", features = ["serde"] }
+redis = { version = "0.23.0" }
+rocket_db_pools = { version = "0.1.0-rc.3", features = ["deadpool_redis"]}
+
