--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,3 +20,4 @@ deadpool-redis = { version = "0.11.1", features = ["serde"] }
 redis = { version = "0.23.0" }
 rocket_db_pools = { version = "0.1.0-rc.3", features = ["deadpool_redis"]}
 chrono = { version = "0.4.24", features = ["serde"] }
+thiserror = "1.0.40"
