--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,12 +12,13 @@ license = "MIT"
 [dependencies]
 rocket = "0.5.0-rc.3"
 rocket_dyn_templates = { version = "0.1.0-rc.3", features = ["tera"] }
-reqwest = { version = "0.11.16", features = ["json"] }
-serde = { version = "1.0.160", features = ["derive"] }
-serde_json = "1.0.95"
-deadpool = { version = "0.9.1", default = false, features = ["managed", "serde"] }
-deadpool-redis = { version = "0.11.1", features = ["serde"] }
-redis = { version = "0.23.0" }
+reqwest = { version = "~0.11", features = ["json"] }
+serde = { version = "~1.0", features = ["derive"] }
+serde_json = "~1.0"
+deadpool = { version = "~0.9", default = false, features = ["managed", "serde"] }
+deadpool-redis = { version = "~0.11", features = ["serde"] }
+redis = { version = "~0.23" }
 rocket_db_pools = { version = "0.1.0-rc.3", features = ["deadpool_redis"]}
-chrono = { version = "0.4.24", features = ["serde"] }
-thiserror = "1.0.40"
+chrono = { version = "~0.4", features = ["serde"] }
+thiserror = "~1.0"
+time = "~0.2.27"
